--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div class="navbar">
       <a class="nav-title-link" href="./index.html">
         <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">Portfolio</span>
          <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:schildknecht.manuela@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
@@ -50,8 +50,7 @@
             - Change the number to point to your Unemployable & replace the OpenSea link with your own
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
-          <img src="./assets/images/1311.png" class="portfolio-header-image">
-          <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
+          <img src="./assets/images/RundesApplicationBild.png" class="portfolio-header-image">
             <span class="image-caption">Unemployables #1311</span>
           </a>
         </div>
