--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       This should be the same across all pages.
      -->
     <link rel="icon" href="./assets/images/RundesApplicationBild.png" />
-		<title>Unemployables Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
+		<title>Portfolio Manuela Schildknecht</title>
+    <meta name="description" content="A portfolio template.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="./css/layout.css">
@@ -51,7 +51,7 @@
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
           <img src="./assets/images/RundesApplicationBild.png" class="portfolio-header-image">
-            <span class="image-caption">Unemployables #1311</span>
+            <span class="image-caption"></span>
           </a>
         </div>
 
@@ -65,7 +65,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Hey, I'm Manu</span>
-              <div class="body-text">I’m a freelance designer and developer who aims to help other creatives build out their portfolios, skillset, and businesses.</div>
+              <div class="body-text">This site is currently under construction.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
@@ -84,8 +84,22 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">With a deep passion for gaming and a strong ambition to grow as a software developer, I’ve always
+been drawn to the challenge and excitement of creating games.</div>
+          <div class="body-text">During my time at Kaiko (THQ Nordic), I played a key role in an AA-Project, coding according to
+the Entity-Component-System (ECS) pattern to ensure clean, maintainable, and scalable code. I
+collaborated closely with other departments to align technical implementation with creative vision
+and actively supported project management efforts. Applying advanced 3D mathematical concepts, I
+tackled intricate gameplay challenges while mentoring Junior Programmers and Interns in planning
+and writing structured code. Through regular performance analyses and optimization, I helped
+deliver a smooth and engaging player experience. This multifaceted experience allowed me to grow
+both professionally and creatively.
+I completed my B.Sc. in Computer Science at the Frankfurt University of Applied Sciences in 2017,
+where I gained extensive experience in various programming languages. My passion for the game
+industry led me to pursue a degree in Games Engineering at the University of Würzburg in the same
+year. Throughout this program, I expanded my expertise in C++, C#, and various game engines
+through a range of projects.
+</div>
         </div>
       </div>
 
