--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@ tackled intricate gameplay challenges while mentoring Junior Programmers and Int
 and writing structured code. Through regular performance analyses and optimization, I helped
 deliver a smooth and engaging player experience. This multifaceted experience allowed me to grow
 both professionally and creatively.
+</div>
+		 <div class="body-text">
 I completed my B.Sc. in Computer Science at the Frankfurt University of Applied Sciences in 2017,
 where I gained extensive experience in various programming languages. My passion for the game
 industry led me to pursue a degree in Games Engineering at the University of Würzburg in the same
