--- a/index.html
+++ b/index.html
@@ -180,6 +180,15 @@ through a range of projects.
       <a class="icon-link" href="mailto:schildknecht.manuela@gmail.com">
         <image src="./assets/icons/mail.svg" class="footer-icon"/>
       </a>
+    
+      <!-- 
+        TODO - Change the LinkedIn link  
+      
+        This should be the same across all pages.
+      -->
+      <a class="icon-link" href="www.linkedin.com/in/manuela-schildknecht">
+        <image src="./assets/icons/linkedIn.svg" class="footer-icon"/>
+      </a>
     </div>
 
 	</body>
