--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ through a range of projects.
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" href="www.linkedin.com/in/manuela-schildknecht">
+      <a class="icon-link" href="https://www.linkedin.com/in/manuela-schildknecht">
         <image src="./assets/icons/linkedIn.svg" class="footer-icon"/>
       </a>
     </div>
