--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ through a range of projects.
       <!-- PROJECTS / MY WORK SECTION -->
       <div id="my-work-section">
         <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
-        <span class="subheader-text">My Projects</span>
+        <span class="subheader-text">My Projects - This site is currently under construction.</span>
 
         <div class="projects-container">
           <!-- 
@@ -134,10 +134,10 @@ through a range of projects.
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
           <div class="project-card">
-            <img src="./assets/images/desktop.jpeg" class="project-image">
+            <img src="./assets/images/Managine.png" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="subheader-text project-title">3D-Engine Managine</div>
+              <div class="body-text project-card-text">Custom Game Engine created with OpenGL</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
