--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ through a range of projects.
               <div class="subheader-text project-title">3D-Engine Managine</div>
               <div class="body-text project-card-text">Custom Game Engine created with OpenGL</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <a class="button" href="./project-pages/managine.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
