--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -58,7 +58,7 @@
           -->
         <div class="main-title">Managine</div>
         <div class="body-text">Custome 3D Engine using OpenGL.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <image class="project-header-image" src="../assets/images/Managine Poster.pdf">
       </div>
 
     <!-- FOOTER -->
@@ -69,7 +69,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" href="mailto:schildknecht.manuela@gmail.com">
-        <image src="./assets/icons/mail.svg" class="footer-icon"/>
+        <image src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     
       <!-- 
@@ -78,7 +78,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" href="https://www.linkedin.com/in/manuela-schildknecht">
-        <image src="./assets/icons/linkedIn.svg" class="footer-icon"/>
+        <image src="../assets/icons/linkedIn.svg" class="footer-icon"/>
       </a>
     </div>
 
