--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -58,7 +58,7 @@
           -->
         <div class="main-title">Managine</div>
         <div class="body-text">Custome 3D Engine using OpenGL.</div>
-        <image class="project-header-image" src="../assets/images/Managine Poster.pdf">
+        <image class="project-header-image" src="../assets/images/managinePoster.png">
       </div>
 
     <!-- FOOTER -->
