--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -61,6 +61,8 @@
         <image class="project-header-image" src="../assets/images/managinePoster.png">
       </div>
 
+<a href="https://github.com/schildka/Managine">Project Link</a>
+	    
     <!-- FOOTER -->
     <div id="footer">
       <!-- 
