--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -12,7 +12,7 @@
 
       This should be the same across all pages.
      -->
-     <link rel="icon" href="../assets/images/1311.png" />
+     <link rel="icon" href="../assets/images/RundesApplicationBild.png" />
      <title>Project Managine</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
