--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -57,11 +57,9 @@
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
         <div class="main-title">Managine</div>
-        <div class="body-text">Custome 3D Engine using OpenGL.</div>
-        <image class="project-header-image" src="../assets/images/ManaginePoster.png">
+        <div class="body-text">Custome 3D Engine using OpenGL. <a href="https://github.com/schildka/Managine">Project Link</a> </div>
+        <image class="project-psoter-image" src="../assets/images/ManaginePoster.png">
       </div>
-
-<a href="https://github.com/schildka/Managine">Project Link</a>
 	    
     <!-- FOOTER -->
     <div id="footer">
