--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -58,8 +58,22 @@
           -->
         <div class="main-title">Managine</div>
         <div class="body-text">Custome 3D Engine using OpenGL. <a href="https://github.com/schildka/Managine">Project Link</a> </div>
-        <image class="project-psoter-image" src="../assets/images/ManaginePoster.png">
       </div>
+
+ <!-- PROJECT ENTRY -->
+  <div class="project-entry">
+    <div class="project-description">
+      <h2>Engine Poster</h2>
+      <p>
+        This poster showcases the core features of the Managine 3D engine, including real-time lighting,
+        shadow mapping, and modular ECS architecture. The engine is built using C++ and OpenGL,
+        and designed to support both runtime and editor-time components.
+      </p>
+    </div>
+    <div class="project-image">
+      <img src="../assets/images/ManaginePoster.png" alt="Poster showing Managine Engine features">
+    </div>
+  </div>
 	    
     <!-- FOOTER -->
     <div id="footer">
