--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -74,6 +74,7 @@
       <img src="../assets/images/ManaginePoster.png" alt="Poster showing Managine Engine features">
     </div>
   </div>
+</div>
 	    
     <!-- FOOTER -->
     <div id="footer">
