--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -66,8 +66,15 @@
       <h2>Engine Poster</h2>
       <p>
         This poster showcases the core features of the Managine 3D engine, including real-time lighting,
-        shadow mapping, and modular ECS architecture. The engine is built using C++ and OpenGL,
-        and designed to support both runtime and editor-time components.
+        shadow mapping, and modular ECS architecture. The engine is built using C++ and OpenGL.
+	Managine including an asset management, rendering,
+	animation, physics and sound system. Special emphasis lies on
+	several rendering aspects, in-game resource management and
+	real-time creation of objects. Based on this engine two different
+	games were created and evaluated based on their performance
+	and usability. On a CPU with 3.30GHz both games run with 60
+	frames per seconds. For each of Managines features, around 1
+	to 8 lines of codes are necessary, for integration.
       </p>
     </div>
     <div class="project-image">
