--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -77,7 +77,7 @@
 	to 8 lines of codes are necessary, for integration.
       </p>
     </div>
-    <div class="project-image">
+    <div class="project-entry-image">
       <img src="../assets/images/ManaginePoster.png" alt="Poster showing Managine Engine features">
     </div>
   </div>
