--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -60,59 +60,64 @@
         <div class="body-text">Custome 3D Engine using OpenGL. <a href="https://github.com/schildka/Managine">Project Link</a> </div>
       </div>
 
- <!-- PROJECT ENTRY -->
-  <div class="project-entry">
-    <div class="project-description">
-      <h2>Engine Poster</h2>
-      <p>
-        This poster showcases the core features of the Managine 3D engine, including real-time lighting,
-        shadow mapping, and modular ECS architecture. The engine is built using C++ and OpenGL.
-	<br>
-	Managine including an asset management, rendering,
-	animation, physics and sound system. Special emphasis lies on
-	several rendering aspects, in-game resource management and
-	real-time creation of objects. Based on this engine two different
-	games were created and evaluated based on their performance
-	and usability. On a CPU with 3.30GHz both games run with 60
-	frames per seconds. For each of Managines features, around 1
-	to 8 lines of codes are necessary, for integration.
-	<br>
-	Two different games were created with Managine. A building game, where the player has
-	to manage resources and build objects to handle them and a
-	puzzle game, in which a riddle has to be solved in time. Optical
-	differences are the character models which uses different
-	animations as well as the skyboxes. The building game makes
-	use of a terrain, whereas the puzzle game only utilize 3D
-	boxes to build the game world. Furthermore, the graphical user
-	interface differs too. Other distinctions only concern the games
-	rules. As a result both games are only distinguishable by their
-	behavior and environment. Both integrates Managines engine
-	and thus the engines rendering, physics, sound, animation and
-	asset management system.
-	<br>
-	Both games were tested and the frames per seconds were
-	evaluated. Measured was on an Intel(R) Core(TM) i5-6600
-	CPU with 3.30GHz. On a debug build both games run with
-	constants 30 fps. On the other hand, both release builds
-	displayed 60 fps while playing.
-	<br>
-	The engines usability was measured in lines of code. For
-	example to switch the camera to a free flight camera from the
-	third person camera perspective and back, only requires one
-	line of code. Both camera perspectives are already defined in
-	Managine and only one enum triggers the change. Depending
-	on what is needed, water effects can be implemented in the
-	game typing four to eight lines of code. For every new light
-	creation only one line of code is necessary. At last, the minimal
-	amount of lines of code needed to initialize an object and place
-	it into the world with its properties and physics values, is three.
-      </p>
+      <!-- PROJECT DETAILS -->
+      <!-- 
+        TODO
+
+        - Change the 'subheader-text' to whatever header you want for project details
+        - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
+      -->
+      <div id="project-details">
+        <div class="subheader-text">Project Details / Background</div>
+        <div class="project-details-content">
+          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
+          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+        </div>
+      </div>
+
+      <!-- IMAGE GALLERY -->
+      <div id="project-gallery">
+        <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
+        <div class="subheader-text">Image Gallery</div>
+        <div class="project-gallery-content">
+            <!-- 
+              TODO
+
+              This is where the images in the gallery live. Here's a simple gallery image for you to copy:
+
+              Full Width Image:
+
+                <div class="gallery-image-container">
+                  <img src="../assets/images/IMAGE_NAME" class="gallery-image">
+                  <span class="image-caption">IMAGE_CAPTION</span>
+                </div>
+
+              Half Width Image: 
+
+                <div class="gallery-image-container half-width">
+                  <img src="../assets/images/IMAGE_NAME" class="gallery-image">
+                  <span class="image-caption">IMAGE_CAPTION</span>
+                </div>
+
+              - To add an image to the this area, copy one of the above, paste it below this comment, and change the following:
+                  - IMAGE_NAME: the name of the image file in assets/images
+                  - IMAGE_CAPTION: to the caption of the image
+            -->
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/ManaginePoster.png" class="gallery-image">
+              <span class="image-caption">Give your image a caption. People love context.</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/ManaginePoster.png" class="gallery-image">
+              <span class="image-caption">Give your image a caption. People love context.</span>
+            </div>
+            <div class="gallery-image-container">
+              <img src="../assets/images/ManaginePoster.png" class="gallery-image">
+              <span class="image-caption">Give your image a caption. People love context.</span>
+            </div>
+        </div>
+      </div>
     </div>
-    <div class="project-entry-image">
-      <img src="../assets/images/ManaginePoster.png" alt="Poster showing Managine Engine features">
-    </div>
-  </div>
-</div>
 	    
     <!-- FOOTER -->
     <div id="footer">
