--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -70,8 +70,24 @@
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">Managine
+is a 3D engine including an asset management, rendering,
+animation, physics and sound system. Special emphasis lies on
+several rendering aspects, in-game resource management and
+real-time creation of objects. Based on this engine two different
+games were created and evaluated based on their performance
+and usability. On a CPU with 3.30GHz both games run with 60
+frames per seconds. For each of Managines features, around 1
+to 8 lines of codes are necessary, for integration.
+</div>
+          <div class="body-text">Managine is composed of many subsystems, including an
+asset management-, physics-, renderer- and sound-system.
+Character animations, graphical interfaces and the handling of
+game resources are supported by Managine as well. The engine
+itself initializes these systems and executes them in a loop.
+In addition to the systems, the engine also handles specified
+actors. Actors are defined by Managine. All actors have an
+update function which gets carried out by the engine.</div>
         </div>
       </div>
 
@@ -105,7 +121,7 @@
             -->
             <div class="gallery-image-container half-width">
               <img src="../assets/images/ManaginePoster.png" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique </span>
+              <span class="image-caption">Engine Poster</span>
             </div>
         </div>
       </div>
