--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -127,6 +127,10 @@ update function which gets carried out by the engine.</div>
               <img src="../assets/images/ManagineSpaceGame.png" class="gallery-image">
               <span class="image-caption">Puzzle Game created with Managine</span>
             </div>
+	    <div class="gallery-image-container half-width">
+              <img src="../assets/images/Managine.png" class="gallery-image">
+              <span class="image-caption">Building Game created with Managine</span>
+            </div>
         </div>
       </div>
     </div>
