--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -95,17 +95,17 @@ update function which gets carried out by the engine.</div>
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
         <div class="subheader-text">Image Gallery</div>
-        <div class="project-gallery-content">
-	  <div class="gallery-image-container">
-	    <img src="../assets/images/ManaginePoster.png" class="gallery-image">
+        <div class="project-gallery-content masonry">
+	  <div class="masonry-item">
+	    <img src="../assets/images/ManaginePoster.png" alt="Engine Poster">
 	    <span class="image-caption">Engine Poster</span>
 	  </div>
-	  <div class="gallery-image-container">
-	    <img src="../assets/images/ManagineSpaceGame.png" class="gallery-image">
+	  <div class="masonry-item">
+	    <img src="../assets/images/ManagineSpaceGame.png" alt="Puzzle Game created with Managine">
 	    <span class="image-caption">Puzzle Game created with Managine</span>
 	  </div>
-	  <div class="gallery-image-container">
-	    <img src="../assets/images/Managine.png" class="gallery-image">
+	  <div class="masonry-item">
+	    <img src="../assets/images/Managine.png" alt="Building Game created with Managine">
 	    <span class="image-caption">Building Game created with Managine</span>
 	  </div>
 	</div>
