--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -119,11 +119,11 @@ update function which gets carried out by the engine.</div>
                   - IMAGE_NAME: the name of the image file in assets/images
                   - IMAGE_CAPTION: to the caption of the image
             -->
-            <div class="gallery-image-container half-width">
+            <div class="gallery-image-container">
               <img src="../assets/images/ManagineSpaceGame.png" class="gallery-image">
               <span class="image-caption">Puzzle Game build with Managine</span>
             </div>
-            <div class="gallery-image-container half-width">
+            <div class="gallery-image-container">
               <img src="../assets/images/Managine.png" class="gallery-image">
               <span class="image-caption">Building Game build with Managine.</span>
             </div>
