--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -44,6 +44,32 @@
       </a>
     </div>
 
+<!-- Project Details Card Section -->
+<div class="project-card">
+  <div class="card-header">
+    <h3 class="card-title">Project Details</h3>
+  </div>
+  
+  <div class="card-body">
+    <div class="card-item">
+      <strong>Engine Used:</strong>
+      <span>Custom 3D Engine</span>
+    </div>
+    <div class="card-item">
+      <strong>Programming Languages:</strong>
+      <span>C++, OpenGL</span>
+    </div>
+    <div class="card-item">
+      <strong>Tools Used:</strong>
+      <span>Visual Studio, Git, CMake</span>
+    </div>
+    <div class="card-item">
+      <strong>Project Link:</strong>
+      <span><a href="https://github.com/your-project">GitHub Repository</a></span>
+    </div>
+  </div>
+</div>
+		
     <!-- MAIN PAGE CONTENT -->
     <div id="main-content">
 
@@ -68,7 +94,7 @@
         - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
       -->
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">Project Details</div>
         <div class="project-details-content">
           <div class="body-text">Managine
 is a 3D engine including an asset management, rendering,
