--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -45,7 +45,7 @@
     </div>
 
 <!-- Project Details Card Section -->
-<div class="project-card">
+<div class="project-init">
   <div class="card-header">
     <h3 class="card-title">Project Details</h3>
   </div>
