--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -43,32 +43,6 @@
         </a>
       </a>
     </div>
-
-<!-- Project Details Card Section -->
-<div class="project-init">
-  <div class="card-header">
-    <h3 class="card-title">Project Details</h3>
-  </div>
-  
-  <div class="card-body">
-    <div class="card-item">
-      <strong>Engine Used:</strong>
-      <span>Custom 3D Engine</span>
-    </div>
-    <div class="card-item">
-      <strong>Programming Languages:</strong>
-      <span>C++, OpenGL</span>
-    </div>
-    <div class="card-item">
-      <strong>Tools Used:</strong>
-      <span>Visual Studio, Git, CMake</span>
-    </div>
-    <div class="card-item">
-      <strong>Project Link:</strong>
-      <span><a href="https://github.com/your-project">GitHub Repository</a></span>
-    </div>
-  </div>
-</div>
 		
     <!-- MAIN PAGE CONTENT -->
     <div id="main-content">
@@ -86,6 +60,32 @@
         <div class="body-text">Custome 3D Engine using OpenGL. <a href="https://github.com/schildka/Managine">Project Link</a> </div>
       </div>
 
+	<!-- Project Details Card Section -->
+	<div class="project-init">
+	  <div class="card-header">
+	    <h3 class="card-title">Project Details</h3>
+	  </div>
+	  
+	  <div class="card-body">
+	    <div class="card-item">
+	      <strong>Engine Used:</strong>
+	      <span>Custom 3D Engine</span>
+	    </div>
+	    <div class="card-item">
+	      <strong>Programming Languages:</strong>
+	      <span>C++, OpenGL</span>
+	    </div>
+	    <div class="card-item">
+	      <strong>Tools Used:</strong>
+	      <span>Visual Studio, Git, CMake</span>
+	    </div>
+	    <div class="card-item">
+	      <strong>Project Link:</strong>
+	      <span><a href="https://github.com/your-project">GitHub Repository</a></span>
+	    </div>
+	  </div>
+	</div>
+	    
       <!-- PROJECT DETAILS -->
       <!-- 
         TODO
@@ -145,11 +145,11 @@ update function which gets carried out by the engine.</div>
                   - IMAGE_NAME: the name of the image file in assets/images
                   - IMAGE_CAPTION: to the caption of the image
             -->
-            <div class="gallery-image-container">
+            <div class="gallery-image-container half-width">
               <img src="../assets/images/ManagineSpaceGame.png" class="gallery-image">
               <span class="image-caption">Puzzle Game build with Managine</span>
             </div>
-            <div class="gallery-image-container">
+            <div class="gallery-image-container half-width">
               <img src="../assets/images/ManaginePoster.png" class="gallery-image">
               <span class="image-caption">Managine Poster.</span>
             </div>
