--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
 	<body>
 
     <!-- NAVBAR -->
-    <div class="navbar">
-      <a class="nav-title-link" href="./index.html">
-        <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
-        <span class="nav-title">Portfolio</span>
-<button id="dark-mode-toggle" class="dark-mode-toggle">
-  <span class="button-text">Toggle Dark Mode</span>
-</button>
-         <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
-        <a class="button" href="mailto:schildknecht.manuela@gmail.com">
-          <span class="button-text">Contact Me</span>
-        </a>
-      </a>
-    </div>
+<div class="navbar">
+  <a class="nav-title-link" href="../index.html">
+    <span class="nav-title">Portfolio</span>
+  </a>
+  
+  <!-- Wrap these buttons inside a container -->
+  <div class="navbar-actions">
+    <!-- Dark mode toggle -->
+    <button id="dark-mode-toggle" class="dark-mode-toggle">
+      <span class="button-text">Toggle Dark Mode</span>
+    </button>
+  </div>
+</div>
+
 
     <!-- MAIN PAGE CONTENT -->
     <div id="main-content">
