Added Game Section with first project page

--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         <div class="about-section-content">
           <div class="body-text">With a deep passion for gaming and a strong ambition to grow as a software developer, I’ve always
 been drawn to the challenge and excitement of creating games.</div>
-          <div class="body-text">During my time at Kaiko (THQ Nordic), I played a key role in an AA-Project, coding according to
-the Entity-Component-System (ECS) pattern to ensure clean, maintainable, and scalable code. I
-collaborated closely with other departments to align technical implementation with creative vision
-and actively supported project management efforts. Applying advanced 3D mathematical concepts, I
-tackled intricate gameplay challenges while mentoring Junior Programmers and Interns in planning
-and writing structured code. Through regular performance analyses and optimization, I helped
-deliver a smooth and engaging player experience. This multifaceted experience allowed me to grow
-both professionally and creatively.
+          <div class="body-text">Currently at Kaiko (THQ Nordic), I play a key role in an AA project, coding according to the
+Entity-Component-System (ECS) pattern to ensure clean, maintainable, and scalable code. I
+collaborate closely with other departments to align technical implementation with the creative vision
+and actively support project management efforts. By applying advanced 3D mathematical concepts, I
+tackle intricate gameplay challenges while mentoring junior programmers and interns in planning and
+writing structured code. Through regular performance analysis and optimization, I help deliver a
+smooth and engaging player experience. This multifaceted role has allowed me to grow both
+professionally and creatively
 </div>
 		 <div class="body-text">
 I completed my B.Sc. in Computer Science at the Frankfurt University of Applied Sciences in 2017,
@@ -112,8 +112,49 @@ through a range of projects.
 
       <!-- PROJECTS / MY WORK SECTION -->
       <div id="my-work-section">
+	  
+	  <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
+        <span class="subheader-text">Games - This site is currently under construction.</span>
+
+        <div class="projects-container">
+          <!-- 
+            TODO
+
+            This is where the project cards live. Here's a base level project card for you to copy:
+            <div class="project-card">
+              <img src="./assets/images/IMAGE_NAME" class="project-image">
+              <div class="project-card-text-container">
+                <div class="subheader-text project-title">PROJECT_NAME</div>
+                <div class="body-text project-card-text">SMALL_PROJECT_DESCRIPTION</div>
+              </div>
+              <a class="button" href="./project-pages/PROJECT_PAGE_NAME.html">
+                <span class="button-text">Read More</span>
+                <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+              </a>
+            </div>
+
+            - To add a project to the this area, copy the above, paste it below this comment, and change the following:
+                - IMAGE_NAME: the name of the image file in assets/images
+                - PROJECT_NAME: the name of the project (keep it short, it only shows 1 line)
+                - SMALL_PROJECT_DESCRIPTION: a quick project description (max 4 lines)
+                - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
+          -->
+          <div class="project-card">
+            <img src="./assets/images/RoyalRevoltTraderKeyart.jpg" class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Royal Revolt: A Trader's Tale</div>
+              <div class="body-text project-card-text">Mobile RPG for Android/IOS</div>
+            </div>
+            <a class="button" href="./project-pages/royalRevoltTraders.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
+        </div>
+	  
+	  
         <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
-        <span class="subheader-text">My Projects - This site is currently under construction.</span>
+        <span class="subheader-text" style="margin-top: 60px; display: inline-block;">My Projects - This site is currently under construction.</span>
 
         <div class="projects-container">
           <!-- 
