Added zoomable pictures

--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@ through a range of projects.
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
           <div class="project-card">
-            <img src="./assets/images/RoyalRevoltTraderKeyart.jpg" class="project-image">
+			<a href="./project-pages/royalRevoltTraders.html">
+				<div class="project-image-container">
+					<img src="./assets/images/RoyalRevoltTraderKeyart.jpg" class="project-image">
+				</div>
+			</a>
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Royal Revolt: A Trader's Tale</div>
               <div class="body-text project-card-text">Mobile RPG for Android/IOS</div>
@@ -180,7 +184,11 @@ through a range of projects.
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
           <div class="project-card">
-            <img src="./assets/images/Managine.png" class="project-image">
+			<a href="./project-pages/managine.html">
+				<div class="project-image-container">
+					<img src="./assets/images/Managine.png" class="project-image">
+				</div>
+			</a>
             <div class="project-card-text-container">
               <div class="subheader-text project-title">3D-Engine Managine</div>
               <div class="body-text project-card-text">Custom Game Engine created with OpenGL</div>
