--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -28,7 +28,7 @@
     <!-- NAVBAR -->
 <div class="navbar">
   <a class="nav-title-link" href="../index.html">
-    <span class="nav-title">Portfolio</span>
+    <span class="nav-title">Back To Portfolio</span>
   </a>
   
   <!-- Wrap these buttons inside a container -->
