added merge jelly page

--- a/index.html
+++ b/index.html
@@ -154,6 +154,23 @@ through a range of projects.
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
           </div>
+		  
+		  <div class="project-card">
+			<a href="./project-pages/jellyMerge.html">
+				<div class="project-image-container">
+					<img src="./assets/images/JellyStart.png" class="project-image">
+				</div>
+			</a>
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Merge Jelly Idle Adventure</div>
+              <div class="body-text project-card-text">Merge Idle Game for Android</div>
+            </div>
+            <a class="button" href="./project-pages/royalRevoltTraders.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
+		  
         </div>
 	  
 	  
